style.css
body {
    margin: 0;
    padding: 0;
    background: #0f0f0f;
}

header {
  height: 100px;
  text-align: center;
  background: #dd5c11;
}

h1 {
  position: absolute;
  top: 1%;
  left: 38%;
  font-size: 40px;
  font-family: 'Bungee Shade', cursive;
}

#logo {
  height: 120px;
  width: 650px;
  z-index: 4;
  position: relative;
}

main {
  height: 525px;
  background: url("img/stars.png");
  background-size: cover;
  text-align: center;
  border: 5px solid black;
}

.sides {
  height: 400px;
  margin: 0 20px;
  text-align: center;
  display: inline-block;
  background-color: #0f0f0f;
  vertical-align: top;
  border: 5px solid #232323;
  border-radius: 8%;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
}

#canvasDiv {
  height: 525px;
  width: 850px;
  margin: 0 auto;
  text-align: center;
  display: inline-block;
  background: #232323;
}

canvas {
  border: 1px solid #0f0f0f;
  background-color: black;
  border-radius: 5%;
  border: 5px solid black;
  outline: none;
  z-index: 1;
}

.blackDisplays {
  height: 50px;
  width: 250px;
  background-color: #000000;
  position: relative;
  top: 10%;
  margin-bottom: 40px;
  padding: 10px 0;
  font-family: 'Press Start 2P', cursive;
  color: #44E547;
  font-size: 15px;
  text-shadow: 0 0 0.2em #8F7;
  line-height: 1.5
}

.redButtons {
  width: 100px;
  height: 100px;
  display: inline-block;
  margin: 0 20px;
  background: url("img/button1.png");
}

#buttonContainer {
  height: 100px;
  text-align: center;
  background: #dd5c11;
}

footer {
  height: 50px;
  background: #dd5c11;
  text-align: center;
}

.buttonLabels {
  height: 40px;
  width: 60px;
  font-size: 25px;
  font-family: 'Bungee Inline', cursive;
  color: #000000;
  text-align: center;
  display: inline;
  margin: 0px 30px;
}

#notification {
  height: 30px;
  width: 300px;
  background-color: black;
  z-index: 3;
  position: fixed;
  top: 40%;
  left: 40%;
  color: #44E547;
  font-size: 15px;
  line-height: 1.5;
  font-family: 'Press Start 2P', cursive;
  text-shadow: 0 0 0.5em #8F7;
  border: 2px dotted #8F7;
  border-radius: 5%;
  text-align: center;
  vertical-align: middle;
  padding: 10px;
}

/*ALTERNATE FONTS */
/*font-family: 'Bungee Inline', cursive;
font-family: 'Bungee Outline', cursive;
font-family: 'Bungee Shade', cursive;
font-family: 'Press Start 2P', cursive;*/

